--- a/index.css
+++ b/index.css
@@ -11,3 +11,7 @@ table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
+
+button {
+    transition: all 0.5s ease-in-out;
+}
