--- a/mini-apps/1/index.css
+++ b/mini-apps/1/index.css
@@ -17,6 +17,10 @@ section:first-of-type {
     background-color: hotpink;
 }
 
+button {
+    cursor: pointer;
+}
+
 #button {
     background-color: darkviolet;
 
